--- a/src/components/title/style.css
+++ b/src/components/title/style.css
@@ -6,43 +6,7 @@
 	height: 56px;
 	padding: 0;
 	background: #673AB7;
+	color: white;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
-	z-index: 50;
-}
-
-.title h1 {
-	float: left;
-	margin: 0;
-	padding: 0 15px;
-	font-size: 24px;
-	line-height: 56px;
-	font-weight: 400;
-	color: #666;
-}
-
-.title nav {
-	float: right;
-	font-size: 100%;
-}
-
-.title nav a {
-	display: inline-block;
-	height: 56px;
-	line-height: 56px;
-	padding: 0 15px;
-	min-width: 50px;
-	text-align: center;
-	background: rgba(255,255,255,0);
-	text-decoration: none;
-	color: #FFF;
-	will-change: background-color;
-}
-
-.title nav a:hover,
-.title nav a:active {
-	background: rgba(0,0,0,0.2);
-}
-
-.title nav a.active {
-	background: rgba(0,0,0,0.4);
+	z-index: 666;
 }
